--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -15,11 +15,12 @@ body {
             position: fixed;
             top: 0;
             left: 0;
-            height: 13vh;
+            height: 12vh;
             width: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
+            z-index: 99;
 
             #nav-logo {
                 height: 70%;
@@ -33,9 +34,90 @@ body {
         //MAIN      
         //////////////////////////
         .main-container {
-            margin-top: 13vh;
-            height: 2000px;
-            border: 2px solid black;
+            margin-top: 12vh;
+            color: black;
+
+
+            .jumbotron {
+
+                width: 100%;
+                position: relative;
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+
+                .jumbotron-img-container {
+
+                    width: 100%;
+                    height: 700px;
+                    position: relative;
+                    display: inline-block;
+                    position: relative;
+
+                    img {
+                        position: relative;
+                        background-size: cover;
+                        width: 100%;
+                        height: 100%;
+                        z-index: 1;
+                        vertical-align: top;
+                        object-fit: cover;
+                    }
+
+                    .img-veiling {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        background: rgba(0, 0, 0, 0.8);
+                        z-index: 2;
+                    }
+                }
+
+                .jumbotron-description {
+
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    gap: 40px;
+                    position: absolute;
+                    top: 300px;
+                    left: auto;
+                    z-index: 3;
+                    color: white;
+                    margin: 0 30%;
+
+                    h1 {
+                        font-size: 70px;
+                        font-weight: normal;
+                        margin: 0;
+                    }
+
+                    p {
+                        font-size: 27px;
+                        text-align: center;
+                        margin: 0;
+                    }
+
+                    button {
+                        margin: 0;
+                        padding: 10px 30px;
+                        border-radius: 10px;
+                        background-color: #eaca63;
+                        color: black;
+                        font-size: 20px;
+                        border: none;
+                    }
+                }
+
+            }
+
+            .main-content-container {
+                height: 300px
+            }
+
+
         }
 
 
