categories show, no style

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -114,7 +114,15 @@ body {
             }
 
             .main-content-container {
-                height: 300px
+
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+
+                h2 {}
+
+                #categories-container {}
             }
 
 
