--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -119,10 +119,61 @@ body {
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
+                margin: 50px 12% 100px;
 
-                h2 {}
+                h2 {
+                    font-size: 50px;
+                    margin-bottom: 60px;
+                }
 
-                #categories-container {}
+                #categories-container {
+                    display: flex;
+                    flex-wrap: wrap;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 30px;
+
+                    .card-container {
+                        width: calc((100% / 3) - 20px);
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        margin-bottom: 100px;
+
+
+                        .container-category-img {
+                            width: 90%;
+                            height: 250px;
+
+                            img {
+                                width: 100%;
+                                height: 100%;
+                                background-size: cover;
+                                border-radius: 20px;
+                            }
+                        }
+
+                        h3 {
+                            font-size: 30px;
+                        }
+
+                        .category-button {
+                            background-color: #eaca63;
+                            border: 1px solid black;
+                            padding: 8px 25px;
+                            border-radius: 16px;
+                            font-size: 20px;
+
+
+                            &:hover {
+                                color: white;
+                                background-color: black;
+                            }
+                        }
+
+                    }
+                }
             }
 
 
