--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -129,26 +129,26 @@ body {
                 #categories-container {
                     display: flex;
                     flex-wrap: wrap;
-                    align-items: center;
+                    align-items: start;
                     justify-content: center;
                     gap: 30px;
 
                     .card-container {
-                        width: calc((100% / 3) - 20px);
+                        width: calc((100% / 3) - 60px);
                         display: flex;
                         flex-direction: column;
                         align-items: center;
                         justify-content: center;
                         margin-bottom: 100px;
-
+                        padding: 45px 20px;
+                        background-color: black;
+                        border-radius: 20px;
 
                         .container-category-img {
                             width: 90%;
-                            height: 250px;
 
                             img {
                                 width: 100%;
-                                height: 100%;
                                 background-size: cover;
                                 border-radius: 20px;
                             }
@@ -156,17 +156,21 @@ body {
 
                         h3 {
                             font-size: 30px;
+                            color: white;
+                            text-align: center;
                         }
 
                         .category-button {
                             background-color: #eaca63;
-                            border: 1px solid black;
+                            border: 2px solid black;
                             padding: 8px 25px;
                             border-radius: 16px;
                             font-size: 20px;
+                            color: black;
 
 
                             &:hover {
+                                border: 2px solid white;
                                 color: white;
                                 background-color: black;
                             }
