--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -6,30 +6,6 @@ body {
     .app-container {
         position: relative;
 
-
-        //////////////////////////
-        //HEADER
-        //////////////////////////
-        .appheader-container {
-            background-color: black;
-            position: fixed;
-            top: 0;
-            left: 0;
-            height: 12vh;
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 99;
-
-            #nav-logo {
-                height: 70%;
-            }
-        }
-
-
-
-
         //////////////////////////
         //MAIN      
         //////////////////////////
@@ -175,99 +151,14 @@ body {
                                 background-color: black;
                             }
                         }
-
-                    }
-                }
-            }
-
-
-        }
-
-
-
-
-
-
-        //////////////////////////
-        //FOOTER
-        //////////////////////////
-        .appfooter-container {
-            background-color: black;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            color: white;
-            padding-bottom: 100px;
-
-            img {
-                height: 40px;
-                margin: 50px 0 80px;
-            }
-
-            #info-container {
-                display: flex;
-                justify-content: center;
-                align-items: flex-start;
-                gap: 150px;
-
-                #about-container {
-                    width: 30%;
-
-                    h2 {
-                        margin: 0 0 30px;
-                        font-size: 30px;
-                    }
-
-                }
-
-                #links-container {
-                    width: 30%;
-                    display: flex;
-                    justify-content: space-between;
-
-                    #left-links {
-                        display: flex;
-                        flex-direction: column;
-
-                        h2 {
-                            margin: 0 0 30px;
-                            font-size: 30px;
-                        }
-
-                        a {
-                            margin-bottom: 20px;
-                            color: white;
-                            text-decoration: none;
-                        }
-                    }
-
-                    #right-links {
-                        display: flex;
-                        flex-direction: column;
-                        align-items: end;
-
-                        #social-icons-container {
-                            display: flex;
-                            gap: 10px;
-                            margin-bottom: 35px;
-
-                            .social-icon {
-                                background-color: white;
-                                padding: 12px;
-                                border-radius: 10px;
-                                color: black;
-                                font-size: 20px;
-                            }
-                        }
-
-                        a {
-                            margin-bottom: 20px;
-                            color: white;
-                            text-decoration: none;
-                        }
                     }
                 }
             }
         }
     }
+
+    .stores-container {
+        margin: 200px;
+    }
+
 }
