--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -158,7 +158,102 @@ body {
     }
 
     .stores-container {
-        margin: 200px;
-    }
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 12vh 0 100px;
 
+        h2 {
+            text-align: center;
+            font-size: 35px;
+        }
+
+        .store-cards-container {
+            margin: 70px 15% 0;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: center;
+            gap: 3%;
+
+            .storeshow-card {
+                background-color: #fafafa;
+                border-radius: 10px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: calc(((100% / 3) - 3%) - 40px);
+                padding: 30px 10px;
+                margin-bottom: 50px;
+
+                .storeshow-info-container {
+
+
+                    .img-container {
+                        width: 100%;
+                        height: 250px;
+                        overflow: hidden;
+                        border-radius: 15px;
+
+                        img {
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                        }
+                    }
+
+                    .info-container {
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        margin: 25px 0;
+
+                        .affiliation-code {
+                            background-color: #fbd9cf;
+                            padding: 7px 13px;
+                            border-radius: 8px;
+                            font-weight: bold;
+                            font-size: 15px;
+                        }
+
+                        .discount {
+                            color: #f35525;
+                            font-size: 22px;
+                            font-weight: bold;
+                        }
+                    }
+
+                    h3 {
+                        margin-bottom: 30px;
+                        font-size: 25px;
+                    }
+
+                    .end-offer {}
+
+                    hr {
+                        width: 100%;
+                        margin: 25px 0;
+                        border: 1px solid #ececec;
+                        border-top: none;
+                        border-left: none;
+                        border-right: none;
+                    }
+                }
+
+                .storeshow-button {
+                    background-color: #1e1e1e;
+                    color: #ffffff;
+                    border-radius: 20px;
+                    padding: 11px 35px;
+                    text-decoration: none;
+                    font-weight: bold;
+                    transition: background-color 0.2s;
+
+                    &:hover {
+                        background-color: #f35525;
+                    }
+                }
+            }
+        }
+    }
 }
