--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -143,6 +143,7 @@ body {
                             border-radius: 16px;
                             font-size: 20px;
                             color: black;
+                            text-decoration: none;
 
 
                             &:hover {
