--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -233,11 +233,51 @@ body {
                         height: 250px;
                         overflow: hidden;
                         border-radius: 15px;
+                        position: relative;
 
                         img {
                             width: 100%;
                             height: 100%;
-                            object-fit: cover;
+                            object-fit: contain;
+                        }
+
+                        .store-card-overlay {
+                            opacity: 0;
+                            position: absolute;
+                            top: 50%;
+                            left: 50%;
+                            transform: translate(-50%, -50%);
+                            width: 100%;
+                            height: 100%;
+                            border: 2px solid black;
+                            border: transparent;
+                            background-color: rgba(0, 0, 0, 0.5);
+                            transition: opacity 0.3s;
+
+                            &:hover {
+                                opacity: 1;
+                            }
+
+                            span {
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                                position: absolute;
+                                top: 50%;
+                                left: 50%;
+                                transform: translate(-50%, -50%);
+                                border: 2px solid #ffffff;
+                                width: 80%;
+                                height: 80%;
+                                border-radius: 20px;
+                                background-color: rgba(0, 0, 0, 0.5);
+                                text-align: center;
+                                font-weight: bold;
+                                text-transform: uppercase;
+                                color: #ffffff;
+                                font-size: 25px;
+                                cursor: pointer;
+                            }
                         }
                     }
 
