passaggio dati singolo store

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -335,4 +335,12 @@ body {
             }
         }
     }
+
+    .store-info-container {
+        margin-top: 12vh;
+
+        h2 {
+            margin: 100px 0;
+        }
+    }
 }
