--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -337,10 +337,116 @@ body {
     }
 
     .store-info-container {
-        margin-top: 12vh;
+        margin: calc(12vh + 200px) 17% 200px;
 
         h2 {
-            margin: 100px 0;
+            font-size: 50px;
+            font-weight: bold;
+        }
+
+        .lower-container {
+            display: flex;
+            gap: 5%;
+            align-items: center;
+            height: 320px;
+            margin-top: 50px;
+
+            .left-column {
+                width: 35%;
+                border-radius: 8px;
+                border: 1px solid #f0f0f0;
+                box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.15);
+
+                ul {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    padding: 20px 30px;
+                    margin-top: 20px;
+
+                    li {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        width: 100%;
+                        height: 60px;
+
+                        span:nth-of-type(1) {
+                            font-size: 18px;
+                            color: gray;
+                        }
+
+                        span:nth-of-type(2) {
+                            font-size: 23px;
+                            font-weight: bold;
+                        }
+
+                    }
+
+                    hr {
+                        width: 100%;
+                        border: 0;
+                        height: 1px;
+                        background-color: #f0f0f0;
+                        margin: 15px 0;
+                    }
+
+                }
+            }
+
+            .img {
+                width: 35%;
+
+                img {
+                    width: 100%;
+                }
+            }
+
+            .description-container {
+                width: 30%;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+
+                span {
+                    font-size: 20px;
+                    font-weight: bold;
+                    height: 15%;
+                }
+
+                .description {
+                    height: 65%;
+                    overflow-y: auto;
+                }
+
+
+                a {
+                    text-decoration: none;
+                    height: 20%;
+
+                    .store-button {
+                        position: relative;
+                        background-color: #1e1e1e;
+                        color: white;
+                        padding: 10px 20px;
+                        border: none;
+                        border-radius: 20px;
+                        font-size: 18px;
+                        transition: all 0.3s;
+                    }
+
+                    .store-button:hover {
+                        background-color: #1e1e1e;
+                        color: #ff6726;
+                        box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.25);
+                    }
+
+                    .store-button:active {
+                        transform: scale(0.98);
+                    }
+                }
+            }
         }
     }
 }
