--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -200,7 +200,7 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 12vh 0 100px;
+        margin: 12vh 0 150px;
 
         h2 {
             text-align: center;
@@ -334,6 +334,35 @@ body {
                 }
             }
         }
+
+        .back-button {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #ff6726;
+            color: white;
+            padding: 15px 30px;
+            border: none;
+            margin-top: 60px;
+            border-radius: 20px;
+            font-size: 18px;
+            cursor: pointer;
+            box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.15);
+            transition: all 0.3s;
+
+            &:hover {
+                background-color: #e55b1a;
+                box-shadow: 0px 8px 18px rgba(0, 0, 0, 0.25);
+            }
+
+            &:active {
+                transform: scale(0.98);
+            }
+
+            &:focus {
+                outline: none;
+            }
+        }
     }
 
     .store-info-container {
@@ -446,6 +475,35 @@ body {
                         transform: scale(0.98);
                     }
                 }
+            }
+        }
+
+        .back-button {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #ff6726;
+            color: white;
+            padding: 15px 30px;
+            border: none;
+            margin-top: 150px;
+            border-radius: 20px;
+            font-size: 18px;
+            cursor: pointer;
+            box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.15);
+            transition: all 0.3s;
+
+            &:hover {
+                background-color: #e55b1a;
+                box-shadow: 0px 8px 18px rgba(0, 0, 0, 0.25);
+            }
+
+            &:active {
+                transform: scale(0.98);
+            }
+
+            &:focus {
+                outline: none;
             }
         }
     }
