--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -14,6 +14,11 @@ body {
             color: black;
 
 
+
+            //////////////////////
+            //Jumbotron
+            //////////////////////
+
             .jumbotron {
 
                 width: 100%;
@@ -88,6 +93,12 @@ body {
                 }
 
             }
+
+
+
+            //////////////////////
+            //CategoriesShow
+            //////////////////////
 
             .main-content-container {
 
@@ -193,6 +204,84 @@ body {
                     }
                 }
             }
+
+            //////////////////////
+            //Newsletter
+            //////////////////////
+
+            .newsletter-container {
+                background-color: #ff6726;
+                border-radius: 8px;
+                padding: 20px;
+                box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.15);
+                width: 100%;
+                max-width: 60%;
+                margin: 0 auto 100px;
+                color: white;
+
+                h3 {
+                    font-size: 30px;
+                    margin-bottom: 0;
+                }
+
+                p {
+                    font-size: 20px;
+                    margin-top: 10px;
+                    margin-bottom: 40px;
+                }
+
+                .input-container {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    flex-wrap: wrap;
+
+                    input {
+                        flex: 1;
+                        padding: 10px 15px;
+                        border: 1px solid white;
+                        border-radius: 20px;
+                        margin-right: 10px;
+                        margin-bottom: 10px;
+                        font-size: 16px;
+                        background-color: white;
+                        color: #ff6726;
+                    }
+
+                    button {
+                        background-color: white;
+                        color: #ff6726;
+                        padding: 10px 20px;
+                        border: none;
+                        border-radius: 20px;
+                        cursor: pointer;
+                        transition: all 0.3s;
+
+                        &:hover {
+                            background-color: #f4f4f4;
+                        }
+
+                        &:active {
+                            transform: scale(0.98);
+                        }
+
+                        &:focus {
+                            outline: none;
+                        }
+                    }
+                }
+
+                .success-message {
+                    color: green;
+                    margin-top: 10px;
+                }
+
+                .error-message {
+                    color: red;
+                    margin-top: 10px;
+                }
+            }
+
         }
     }
 
